# electromag-with-opencl

ElectroMag/: CMakeLists.txt
ElectroMag/src/: ElectroMag.cpp  Electromag utils.h  regression_compare.cpp
GPGPU_Segment/: CMakeLists.txt
GPGPU_Segment/src/: CL_Electrostatics.cpp  CL_Electrostatics.hpp  CL_Manager.cpp  CL_Manager.hpp  Electrostatics.cpp
